token bılgılerını tutmak için bir token entıtysı olsuturuldu bu user sınıfı ile ilişkilendirildi regıster ıslemınde token olusturuluyor ve login olmadna  verı erısımı yapılamıyor suan ıcın eksık kalanrefresh token