@@ -2,35 +2,31 @@ package com.eticare.eticaretAPI.config.jwt;
 
 import com.eticare.eticaretAPI.entity.User;
 import com.eticare.eticaretAPI.repository.IUserRepository;
-import jakarta.annotation.PostConstruct;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
+
     private final IUserRepository userRepository;
 
     public CustomUserDetailsService(IUserRepository userRepository) {
         this.userRepository = userRepository;
     }
 
-
-    // Burada kullanıcıyı veritabanından alacağınız kodu yazabilirsiniz
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        return userRepository.findByUsername(username)
-                .map(user -> new CustomUserDetails(
-                        user.getUsername(),
-                        user.getPassword(),
-                        List.of(new SimpleGrantedAuthority("ROLE_" + user.getRoleEnum().name()))
-                ))
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with username: " + username));
+    User user = userRepository.findByUsername(username).orElseThrow(()->new UsernameNotFoundException("User Bulunamadi "));
+
+        return new org.springframework.security.core.userdetails.User(
+                user.getUsername(),
+                user.getPassword(),
+                Collections.singletonList(new SimpleGrantedAuthority(user.getRoleEnum().name())) // Role ekleniyor
+        );
     }
 }
